--- a/requirements.txt
+++ b/requirements.txt
@@ -1,59 +1,20 @@
-altair==5.5.0
-anyio==4.11.0
-attrs==25.4.0
-blinker==1.9.0
-cachetools==6.2.1
-certifi==2025.10.5
-charset-normalizer==3.4.4
-click==8.3.0
-filelock==3.20.0
-fsspec==2025.10.0
-gitdb==4.0.12
-GitPython==3.1.45
-h11==0.16.0
-hf-xet==1.2.0
-httpcore==1.0.9
-httpx==0.28.1
-huggingface-hub==0.36.0
-idna==3.11
-Jinja2==3.1.6
-jsonschema==4.25.1
-jsonschema-specifications==2025.9.1
-MarkupSafe==3.0.3
-mpmath==1.3.0
-narwhals==2.11.0
-networkx==3.5
-numpy==1.26.4
-packaging==25.0
-pandas==2.3.3
-pillow==12.0.0
-protobuf==6.33.0
-pyarrow==21.0.0
-pydeck==0.9.1
-python-dateutil==2.9.0.post0
-python-dotenv==1.2.1
-pytz==2025.2
-PyYAML==6.0.3
-referencing==0.37.0
-regex==2025.11.3
-requests==2.32.5
-rpds-py==0.28.0
-safetensors==0.6.2
-shellingham==1.5.4
-six==1.17.0
-smmap==5.0.2
-sniffio==1.3.1
 streamlit==1.51.0
-sympy==1.14.0
-tenacity==9.1.2
-tokenizers==0.22.1
-toml==0.10.2
-torch==2.2.2+cpu
-tornado==6.5.2
-tqdm==4.67.1
 transformers==4.57.1
-typer-slim==0.20.0
-typing_extensions==4.15.0
-tzdata==2025.2
-urllib3==2.5.0
+torch==2.9.0
+torchvision==0.24.0
+torchaudio==2.9.0
+pillow==10.4.0
+requests==2.32.3
+python-dotenv==1.0.1
+numpy==2.3.4
+pandas==2.2.3
+altair==5.5.0
+tqdm==4.67.1
+huggingface-hub>=0.34.0
+regex==2025.11.3
+fsspec==2025.10.0
+typing_extensions==4.12.2
+protobuf==5.28.3
 watchdog==6.0.0
+click==8.3.0
+httpx==0.28.1
