--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,21 @@
-streamlit==1.51.0
+streamlit==1.50.0
 transformers==4.57.1
-torch==2.9.0
-torchvision==0.24.0
-torchaudio==2.9.0
+torch==2.2.2
+torchvision==0.17.2
+torchaudio==2.2.2
 pillow==10.4.0
 requests==2.32.3
 python-dotenv==1.0.1
-numpy==2.3.4
+numpy<2
 pandas==2.2.3
 altair==5.5.0
 tqdm==4.67.1
-huggingface-hub>=0.34.0
-regex==2025.11.3
-fsspec==2025.10.0
+huggingface-hub>=0.23.0
+
+regex==2024.11.6
+fsspec==2024.9.0
 typing_extensions==4.12.2
 protobuf==5.28.3
-watchdog==6.0.0
-click==8.3.0
+watchdog==4.0.2
+click==8.1.7
 httpx==0.28.1
